--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="cya">
+    <meta property="og:title" content="ang">
     <meta property="og:url" content="https://angmeow.xyz">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="https://cdn.discordapp.com/attachments/1068943935252201503/1069058147731394631/af981bc4de598319618140453077a224.jpg">
@@ -22,7 +22,6 @@
 <div id="main">
     <div class="name"><center>
         <h3>Ang ;3</h3>
-		<h3>nympho#0001</h3>
         </center></div>
 <div class="social">
 <a href='https://www.roblox.com/users/301765956/profile' target='_blank'><img src='social/logo/rbx.png'></a><a href='https://www.instagram.com/mnpeht/' target='_blank'><img src='social/logo/ig.svg'></a><a href='https://www.tiktok.com/@brook' target='_blank'><img src='social/logo/tt.svg'></a><a href='https://twitter.com/angdontmiss' target='_blank'><img src='social/logo/tw.svg'></a><a href='https://t.me/meowwwwwang' target='_blank'><img src='social/logo/tg.svg'></a><a href='https://www.pinterest.com/meowwwang/' target='_blank'><img src='social/logo/pin.png'></a>
