--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h3>Ang ;3</h3>
         </center></div>
 <div class="social">
-<a href='https://www.roblox.com/users/301765956/profile' target='_blank'><img src='social/logo/rbx.png'></a><a href='https://www.instagram.com/mnpeht/' target='_blank'><img src='social/logo/ig.svg'></a><a href='https://www.tiktok.com/@brook' target='_blank'><img src='social/logo/tt.svg'></a><a href='https://twitter.com/angdontmiss' target='_blank'><img src='social/logo/tw.svg'></a><a href='https://t.me/meowwwwwang' target='_blank'><img src='social/logo/tg.svg'></a><a href='https://www.pinterest.com/meowwwang/' target='_blank'><img src='social/logo/pin.png'></a>
+<a href='https://www.roblox.com/users/301765956/profile' target='_blank'><img src='social/logo/rbx.png'></a><a href='https://www.instagram.com/mnpeht/' target='_blank'><img src='social/logo/ig.svg'></a><a href='https://www.tiktok.com/@brook' target='_blank'><img src='social/logo/tt.svg'></a><a href='https://twitter.com/angdontmiss' target='_blank'><img src='social/logo/tw.svg'></a><a href='https://t.me/meowwwwwang' target='_blank'><img src='social/logo/tg.svg'></a><a href='https://www.pinterest.com/meowwwang/' target='_blank'><img src='social/logo/pin.png'></a><a href='https://discord.gg/should' target='_blank'><img src='social/logo/dc.svg'></a>
 </div>
 </div><audio id="audio" src="social/assets/media/ang.mp3"></audio>
 <script src="social/js/audio.js"></script><div class="dot"></div>
